<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SegundoActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_nombre"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editTextNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:editable="false"
        android:ems="10"
        android:hint="@string/et_nombre"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_base"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editTextBase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:editable="false"
        android:ems="10"
        android:hint="@string/et_base"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/buttonSiguiente2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="Enviar"
        android:text="@string/btn_siguiente" />

    <Button
        android:id="@+id/buttonCerrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="Prueba"
        android:text="@string/btnCerrar" />
</LinearLayout>